test/edition/basics/attributeCheck-badArgType.good
attributeCheck-badArgType.chpl:1: error: '@edition' attribute arguments must be string literals for now
